[package]
name = "maps"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.1"
tokio = { version = "1.39.3", features = ["full"] }
tonic = { version = "0.12.1", features = ["tls", "tls-roots"] }
thiserror = "1.0"
serde_json = "1.0.121"
serde = { version = "1.0.204", features = ["derive"] }
hyper = { version = "1.4.1", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1.2"
bytes = "1.7.1"
regex = "1.10.6"
urlencoding = "2.1.3"
lazy_static = "1.5.0"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.12.1"
